# grixraz

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  install_micromamba.sh  pyproject.toml  setup_env.sh
.github/workflows/: run_tests.yaml
grixraz/: __init__.py  find.py  reference.py
notebooks/: benchmark_old.ipynb  demo.ipynb  example_reference_file.json  kerchunk.ipynb  open_mfdataset.ipynb
tests/: test_grib_definitions.py
tests/data/: grib_test_file
