[tool.poetry]
name = "grixraz"
version = "0.1.0"
description = ""
authors = ["frazane <zanetta.francesco@gmail.com>"]
readme = "README.md"
packages = [{include = "grixraz"}]

[tool.poetry.dependencies]
python = "^3.10"
kerchunk = {git = "https://github.com/fsspec/kerchunk"}
cfgrib = "^0.9.10.4"
xarray = "^2023.12.0"
dask = "^2023.12.1"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
